--- a/install
+++ b/install
@@ -1,16 +1,18 @@
 ﻿PPM_PLUGIN_NAME=ppm-fileoperation
 
 #Plugin version
-VERSION=1.8
+VERSION=1.9.0
 
 #Requires ppm version
-PPM_VERSION=0.91
+PPM_VERSION=0.95
 
 #Requires PPx version
-PPX_VERSION=191
+PPX_VERSION=197
 
 #Requires PPx Script Module version
-SCRIPT_VERSION=19
+SCRIPT_VERSION=21
+CV8_VERSION=3
+QJS_VERSION=0
 
 #Requires external executables. Separated dy commas
 EXECUTABLES=
@@ -19,12 +21,12 @@ EXECUTABLES=
 MODULES=7-zip
 
 #Comma separated dependent plugins. Just a note
-DEPENDENCIES=fastcopy.exe, fcp.exe, reces.exe
+DEPENDENCIES=fastcopy.exe, reces.exe
 
 #CodeType permisson. 0:No restriction | 1:Not use multiByte | 2:Not use unicode
 CODETYPE_PERMISSION=1
 
-#ScriptType permisson. 0:No restriction | 1:JS9(5.7) | 2:JS9(5.8) | 3:JS9(ES5) | 4:Chakra(ES6)
+#ScriptType permisson. 0:No restriction | 1:JS9(5.7) | 2:JS9(5.8) | 3:JS9(ES5) | 4:Chakra(ES6) | 5:CV8(ESNEXT)
 SCRIPTTYPE_PERMISSION=0
 
 #To copy files in the Sheet directory. true | false
