--- a/install
+++ b/install
@@ -1,7 +1,7 @@
 ﻿PPM_PLUGIN_NAME=ppm-fileoperation
 
 #Plugin version
-VERSION=1.9.3
+VERSION=1.9.4
 
 #Requires ppm version
 PPM_VERSION=0.95
@@ -36,4 +36,4 @@ COPY_FLAG=true
 COPY_SCRIPT=false
 
 #Copy by specifying the directory-name
-SPECIFIC_COPY_DIR=
+SPECIFIC_COPY_DIR=complist
